<resources>
    <string name="app_name">Lab_7</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>

    <string name="Widget">Here are my widgets:</string>
    <string name="Button">Button</string>
    <string name="CheckBox">Check this out!</string>
    <string name="SwitchText">Switch on /  off</string>
    <string name="EditText">Type your answer here</string>

    <string name="emailAddress">Enter your email address:</string>
    <string name="emailHint">Type email here</string>
    <string name="password">Type your password:</string>
    <string name="Login">LOGIN</string>

    <string name="Yourprofile">Your profile</string>
    <string name="name">Your name:</string>
    <string name="inputName">Enter your name</string>
    <string name="inputEmail">Your email:</string>
    <string name="YourPicture">Your Picture</string>
    <string name="takePicture">Click the button above to take a picture</string>
    <string name="gotoChat">Go to Chat</string>
    <string name="gototoolbar">Go to Toolbar page</string>
    <string name="SEND">SEND</string>
    <string name="RECEIVE">RECEIVE</string>
    <string name="TypeHere">Type here</string>
    <string name="NewMessage">What is your new Message ?</string>

    <string name="GoToWeatherForecast">Launch the Weather Forecast</string>
    <string name="speed">Wind: %1$s</string>
    <string name="max">Max Temperature: %1$s</string>
    <string name="min">Min Temperature: %1$s</string>
    <string name="current">Current Temperature: %1$s</string>
    <string name="uvrating">UV Rating</string>

</resources>
