<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ListView
        android:id="@+id/listChat"
        android:layout_width="match_parent"
        android:layout_height="550dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SEND" />

        <EditText
            android:id="@+id/messageInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/TypeHere"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonReceive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RECEIVE" />


    </LinearLayout>




</LinearLayout>